# claude-env-sync

./: .gitignore  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: sync-history.md  sync-hook.md  sync-init.md  sync-pull.md  sync-push.md  sync-restore.md  sync-status.md
docs/00_research_notes/: 20260209_연구노트.md
integrations/claude-sync-mcp/: pyproject.toml
integrations/claude-sync-mcp/src/claude_sync_mcp/: __init__.py  __main__.py  server.py  tools.py
integrations/claude-sync-mcp/tests/: test_server.py
scripts/: install.sh
src/claude_env_sync/: __init__.py  cli.py
src/claude_env_sync/core/: git_ops.py  path_resolver.py  sync_engine.py
src/claude_env_sync/hooks/: install.py
src/claude_env_sync/models/: sync_rules.py
src/claude_env_sync/utils/: security.py
tests/unit/: test_cli.py  test_git_ops.py  test_hooks.py  test_path_resolver.py  test_security.py  test_sync_engine.py  test_sync_rules.py
