[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-env-sync"
version = "0.1.0"
description = "Sync your Claude Code settings across machines — like chezmoi, but for AI tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "bono" },
]
keywords = ["claude", "sync", "dotfiles", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "gitpython>=3.1",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "platformdirs>=4.0",
]

[project.scripts]
claude-sync = "claude_env_sync.cli:main"

[project.urls]
Homepage = "https://github.com/bono/claude-env-sync"
Repository = "https://github.com/bono/claude-env-sync"
Issues = "https://github.com/bono/claude-env-sync/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_env_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["claude_env_sync"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
