[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-sync-mcp"
version = "0.1.0"
description = "MCP server for claude-env-sync"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0",
    "claude-env-sync",
]

[project.scripts]
claude-sync-mcp = "claude_sync_mcp.server:main"

[tool.uv.sources]
claude-env-sync = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
